# subsplice

./: README.md  pyproject.toml  requirements.txt
cli/: main.py
demo/: example_run_altanalyze3.py
docs/: conf.py  index.rst  installation.rst  requirements.txt  starting_with_bam.rst  starting_with_psi.rst
spectra/: main_functions.py  run_nmf.py
