[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "2025.0.0"
dependencies = [
  "pandas==2.2.2",
  "scipy==1.16.0",
  "numpy==2.2.6",
  "scikit-learn==1.6.0",
  "nimfa==1.4.0",
  "seaborn==0.13.2",
  "statsmodels==0.14.5",
  "matplotlib==3.10.5",
  "scikit-dimension==0.3.4"
]
requires-python = "3.12"
authors = [
  {name = "Kairavee Thakkar", email = "kairavee.thakkar@cchmc.org"},
  {name = "Nathan Salomonis", email = "nathan.salomonis@cchmc.org"}
]
description = "Splicing-based Pattern Extraction and Clustering using TRAnscriptomics"
readme = file: README.md
license = "MIT"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[project.cli]
spectra-cli = "spectra:cli"

[project.urls]
Repository = "https://github.com/kairaveet/spectra"
"Bug Tracker" = "https://github.com/kairaveet/spectra/issues"